[gd_scene load_steps=13 format=2]

[ext_resource path="res://resimler/arkaplan/anamenuarka5.png" type="Texture" id=1]
[ext_resource path="res://script/menu/Giris.gd" type="Script" id=2]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/hemi-head-426.rg-bolditalic.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 0.392157 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.105882, 0.105882, 0.705882 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=33]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.184314, 0.0117647, 0.0117647, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.133333, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.32549, 0.0352941, 0.0352941, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.392157, 0.0862745, 0.0862745, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Giris" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true,
"_edit_vertical_guides_": [ 18.0 ]
}

[node name="arkaplan" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="yuklemebar" type="ProgressBar" parent="."]
margin_left = 200.0
margin_top = 628.0
margin_right = 1088.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 6 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 69.0

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -224.0
margin_right = 256.0
margin_bottom = -175.0
custom_fonts/font = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
align = 1
max_length = 10
context_menu_enabled = false
placeholder_text = "Adınızı girin..."
placeholder_alpha = 0.3
caret_blink = true
caret_blink_speed = 0.3

[node name="Tamam" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -136.0
margin_right = 88.0
margin_bottom = -89.0
custom_fonts/font = SubResource( 33 )
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 32 )
custom_styles/normal = SubResource( 34 )
text = "Tamam"

[node name="Tween" type="Tween" parent="."]

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Tamam" to="." method="_on_Button_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
